--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -43,12 +43,14 @@
         android:layout_marginBottom="16dp"
         android:ems="10"
         android:gravity="top|left"
-        android:inputType="textPersonName"
-        android:hint="ex. Tomato list"
+        android:hint="@string/ex_tomatoes_ncucumbers_nonions"
+        android:inputType="textMultiLine"
         app:layout_constraintBottom_toTopOf="@+id/ivNoteImage"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvNoteDate" />
+        app:layout_constraintTop_toBottomOf="@+id/tvNoteDate"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/btnNoteSave"
